[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "machina-abstracta"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Abstract machine."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["machina-abstracta"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
machina-abstracta = "machina_abstracta.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-abstracta/machina-abstracta"

[dependency-groups]
dev = ["pytest>=8.0.0"]